# ledwm_neurips2025_law

./: .cursorignore  .gitignore  Dockerfile  README.md  debug_jax.py  env_vln.yml  environment.yml  kill_wandb.sh  pyproject.toml  pyrightconfig.json  run.sh  run_finetune.sh  run_s1_token.sh  run_s2_token.sh  run_sent_no-lang_random_float16.sh  run_sent_no-lang_random_float32.sh  run_small-atten_dense.sh  run_token.sh  run_token_mask-image.sh  run_token_no-lang.sh  run_token_no-lang_greedy.sh  run_token_no-lang_greedy_float32.sh  run_token_no-lang_random_float32.sh  setup_env.sh  test_float.py
docs/: run_s1_parallel_workflow.md
ledwm/: ActorCritic.py  CriticWM.py  Optimizer.py  RSSM.py  VFunction.py  WM.py  agent.py  behaviors.py  common.py  compute_on_fixed_wm.py  configs.yaml  configs_util.py  constants.py  create_dataset_movement.py  create_position_dataset.py  expl.py  inspect_messenger.py  jaxagent.py  jaxutils.py  logging_setup.py  lwm.yaml  movement_classifier.py  ninjax.py  play_messenger.py  predicted_sum_reward.py  requirements_h.txt  resume.py  s1.yaml  s2.yaml  s3.yaml  sentences_s1_test.txt  startup.py  test_cuda_compatibility.py  tfp_compat.py  train.py  train_movement.csv  train_signature.py  update_config.py  val_movement.csv
messenger-emma/: evaluate.py  play_msgr.py  run.py  setup.py
scripts/: activate_ledwm_cuda12.sh  compile_s1.sh  download_sentence_caches.py  pretrain_text.sh  run_homegrid.sh  run_lwm.sh  run_lwm_test.sh  run_s1.sh  run_s1_test.sh  run_s2.sh  run_s2_test.sh  run_s3.sh  run_s3_test.sh  run_vln.sh  sentence_cache_checksums.sha256  (+3 more)
(+209 files in other folders)
